yew-functional-macro/tests/functional_macro/const-fail.stderr
error: const functions can't be functional components
  --> $DIR/const-fail.rs:10:1
   |
10 | const fn comp(props: &Props) -> Html {
   | ^^^^^
